fixing spacing issue when there are a large number of terms in the filter

--- a/marmoset-theme/style.scss
+++ b/marmoset-theme/style.scss
@@ -290,6 +290,7 @@ $projectwidth: 80%;
 					background: #111;
 					border: 1px solid #111;
 					color: #777;
+					line-height: 2.2em;
 					padding: 0.3em 0.5em;
 					@include round-border( 3px );
 					text-decoration: none;
